✨feat: frontend-mentor social links

--- a/frontend-mentor/recipe-page-main/index.html
+++ b/frontend-mentor/recipe-page-main/index.html
@@ -261,8 +261,8 @@
               href="https://www.frontendmentor.io?ref=challenge"
               target="_blank"
               >Frontend Mentor</a
-            >. Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with
-            ❤.
+            >. <br />
+            Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
           </div>
         </div>
       </div>
