🐛fix: hrefs links

--- a/frontend-mentor/recipe-page-main/index.html
+++ b/frontend-mentor/recipe-page-main/index.html
@@ -262,7 +262,9 @@
               target="_blank"
               >Frontend Mentor</a
             >. <br />
-            Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
+            Coded by
+            <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
+            with ❤️.
           </div>
         </div>
       </div>
