--- a/frontend-mentor/social-links-profile-main/index.html
+++ b/frontend-mentor/social-links-profile-main/index.html
@@ -120,15 +120,15 @@
         <div class="button-list">
           <a
             class="button-list__item button-list__item--hover"
-            href=""
+            href="https://github.com/vdeleeuw"
             target="_blank"
           >
             <span>GitHub</span></a
           >
           <a
-            href=""
-            target="_blank"
             class="button-list__item button-list__item--hover"
+            href="https://www.frontendmentor.io/profile/vdeleeuw"
+            target="_blank"
             ><span>Frontend Mentor</span></a
           >
           <span class="button-list__item button-list__item--disabled"
@@ -151,7 +151,9 @@
               target="_blank"
               >Frontend Mentor</a
             >. <br />
-            Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
+            Coded by
+            <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
+            with ❤️.
           </p>
         </div>
       </div>
