--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -40,7 +40,7 @@
 
         .card__illustration {
           width: 100%;
-          height: 100%;
+          height: auto;
 
           img {
             border-radius: 1.1em;
