🐛: fix alt for img

--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -115,7 +115,10 @@
     <div class="container">
       <div class="card card--hover">
         <div class="card__illustration">
-          <img src="assets/images/illustration-article.svg" />
+          <img
+            src="assets/images/illustration-article.svg"
+            alt="illustration"
+          />
         </div>
         <div class="card__tag-list">
           <span class="card__tag-list__item">Learning</span>
