--- a/frontend-mentor/recipe-page-main/index.html
+++ b/frontend-mentor/recipe-page-main/index.html
@@ -154,7 +154,7 @@
     <!-- challenge -->
     <div class="container">
       <div class="card">
-        <img src="assets/images/image-omelette.jpeg" />
+        <img src="assets/images/image-omelette.jpeg" alt="delicious omelette" />
         <div class="card-text">
           <h1>Simple Omelette Recipe</h1>
 
