--- a/frontend-mentor/social-links-profile-main/index.html
+++ b/frontend-mentor/social-links-profile-main/index.html
@@ -110,6 +110,7 @@
           <img
             class="title-block__avatar"
             src="assets/images/avatar-vdeleeuw.png"
+            alt="user's avatar"
           />
           <span class="title-block__main">V. de Leeuw</span>
           <span class="title-block__subtitle">Somewhere, France</span>
