--- a/frontend-mentor/product-preview-card-component-main/index.html
+++ b/frontend-mentor/product-preview-card-component-main/index.html
@@ -196,10 +196,16 @@
       <div class="card">
         <div class="card__illustration">
           <div class="card__illustration--mobile">
-            <img src="images/image-product-mobile.jpg" />
+            <img
+              src="images/image-product-mobile.jpg"
+              alt="bottle of channel eau de parfum"
+            />
           </div>
           <div class="card__illustration--desktop">
-            <img src="images/image-product-desktop.jpg" />
+            <img
+              src="images/image-product-desktop.jpg"
+              alt="bottle of channel eau de parfum"
+            />
           </div>
         </div>
         <div class="card__content">
@@ -225,7 +231,7 @@
           </div>
           <div class="card__content__cart-button">
             <div class="card__content__cart-button__icon">
-              <img src="images/icon-cart.svg" />
+              <img src="images/icon-cart.svg" alt="cart icon" />
             </div>
             <div class="card__content__cart-button__text">
               <span>Add to Cart</span>
