🐛 fix: add main element

--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -112,43 +112,48 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="card card--hover">
-        <div class="card__illustration">
-          <img
-            src="assets/images/illustration-article.svg"
-            alt="illustration"
-          />
+    <main>
+      <div class="container">
+        <div class="card card--hover">
+          <div class="card__illustration">
+            <img
+              src="assets/images/illustration-article.svg"
+              alt="illustration"
+            />
+          </div>
+          <div class="card__tag-list">
+            <span class="card__tag-list__item">Learning</span>
+            <span class="card__tag-list__item">Web</span>
+          </div>
+          <span class="card__date">Published 21 Dec 2023</span>
+          <span class="card__title">HTML & CSS foundations</span>
+          <p class="card__description">
+            These languages are the backbone of every website, defining
+            structure, content, and presentation.
+          </p>
+          <div class="card__author">
+            <img
+              class="card__author__avatar"
+              src="assets/images/avatar-vdeleeuw.png"
+              alt="author's avatar"
+            />
+            <span class="card__author__name">V. de Leeuw</span>
+          </div>
         </div>
-        <div class="card__tag-list">
-          <span class="card__tag-list__item">Learning</span>
-          <span class="card__tag-list__item">Web</span>
-        </div>
-        <span class="card__date">Published 21 Dec 2023</span>
-        <span class="card__title">HTML & CSS foundations</span>
-        <p class="card__description">
-          These languages are the backbone of every website, defining structure,
-          content, and presentation.
-        </p>
-        <div class="card__author">
-          <img
-            class="card__author__avatar"
-            src="assets/images/avatar-vdeleeuw.png"
-          />
-          <span class="card__author__name">V. de Leeuw</span>
-        </div>
-      </div>
 
-      <!-- attribution -->
-      <div class="attribution">
-        <p>
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. <br />
-          Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
-        </p>
+        <!-- attribution -->
+        <div class="attribution">
+          <p>
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. <br />
+            Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
+          </p>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
