--- a/frontend-mentor/product-preview-card-component-main/index.html
+++ b/frontend-mentor/product-preview-card-component-main/index.html
@@ -192,66 +192,70 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <div class="card__illustration">
-          <div class="card__illustration--mobile">
-            <img
-              src="images/image-product-mobile.jpg"
-              alt="bottle of channel eau de parfum"
-            />
+    <main>
+      <div class="container">
+        <div class="card">
+          <div class="card__illustration">
+            <div class="card__illustration--mobile">
+              <img
+                src="images/image-product-mobile.jpg"
+                alt="bottle of channel eau de parfum"
+              />
+            </div>
+            <div class="card__illustration--desktop">
+              <img
+                src="images/image-product-desktop.jpg"
+                alt="bottle of channel eau de parfum"
+              />
+            </div>
           </div>
-          <div class="card__illustration--desktop">
-            <img
-              src="images/image-product-desktop.jpg"
-              alt="bottle of channel eau de parfum"
-            />
+          <div class="card__content">
+            <div class="card__content__category">
+              <span>Perfume</span>
+            </div>
+            <div class="card__content__title">
+              <span>Gabrielle Essence Eau De Parfum</span>
+            </div>
+            <div class="card__content__description">
+              <p>
+                A floral, solar and voluptuous interpretation composed by
+                Olivier Polge, Perfumer-Creator for the House of CHANEL.
+              </p>
+            </div>
+            <div class="card__content__price">
+              <div class="card__content__price__new">
+                <span>$149.99</span>
+              </div>
+              <div class="card__content__price__old">
+                <span>$169.99</span>
+              </div>
+            </div>
+            <div class="card__content__cart-button">
+              <div class="card__content__cart-button__icon">
+                <img src="images/icon-cart.svg" alt="cart icon" />
+              </div>
+              <div class="card__content__cart-button__text">
+                <span>Add to Cart</span>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="card__content">
-          <div class="card__content__category">
-            <span>Perfume</span>
-          </div>
-          <div class="card__content__title">
-            <span>Gabrielle Essence Eau De Parfum</span>
-          </div>
-          <div class="card__content__description">
-            <p>
-              A floral, solar and voluptuous interpretation composed by Olivier
-              Polge, Perfumer-Creator for the House of CHANEL.
-            </p>
-          </div>
-          <div class="card__content__price">
-            <div class="card__content__price__new">
-              <span>$149.99</span>
-            </div>
-            <div class="card__content__price__old">
-              <span>$169.99</span>
-            </div>
-          </div>
-          <div class="card__content__cart-button">
-            <div class="card__content__cart-button__icon">
-              <img src="images/icon-cart.svg" alt="cart icon" />
-            </div>
-            <div class="card__content__cart-button__text">
-              <span>Add to Cart</span>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <!-- attribution -->
-      <div class="attribution">
-        <p>
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. <br />
-          Coded by
-          <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
-          with ❤️.
-        </p>
+        <!-- attribution -->
+        <div class="attribution">
+          <p>
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. <br />
+            Coded by
+            <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
+            with ❤️.
+          </p>
+        </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
