--- a/frontend-mentor/social-links-profile-main/index.html
+++ b/frontend-mentor/social-links-profile-main/index.html
@@ -104,60 +104,62 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <div class="title-block">
-          <img
-            class="title-block__avatar"
-            src="assets/images/avatar-vdeleeuw.png"
-            alt="user's avatar"
-          />
-          <span class="title-block__main">V. de Leeuw</span>
-          <span class="title-block__subtitle">Somewhere, France</span>
-        </div>
+    <main>
+      <div class="container">
+        <div class="card">
+          <div class="title-block">
+            <img
+              class="title-block__avatar"
+              src="assets/images/avatar-vdeleeuw.png"
+              alt="user's avatar"
+            />
+            <span class="title-block__main">V. de Leeuw</span>
+            <span class="title-block__subtitle">Somewhere, France</span>
+          </div>
 
-        <p>"Full-stack developer and avid musician."</p>
+          <p>"Full-stack developer and avid musician."</p>
 
-        <div class="button-list">
-          <a
-            class="button-list__item button-list__item--hover"
-            href="https://github.com/vdeleeuw"
-            target="_blank"
-          >
-            <span>GitHub</span></a
-          >
-          <a
-            class="button-list__item button-list__item--hover"
-            href="https://www.frontendmentor.io/profile/vdeleeuw"
-            target="_blank"
-            ><span>Frontend Mentor</span></a
-          >
-          <span class="button-list__item button-list__item--disabled"
-            >LinkedIn</span
-          >
-          <span class="button-list__item button-list__item--disabled"
-            >Twitter</span
-          >
-          <span class="button-list__item button-list__item--disabled"
-            >Instagram</span
-          >
-        </div>
-
-        <!-- attribution -->
-        <div class="attribution">
-          <p>
-            Challenge by
+          <div class="button-list">
             <a
-              href="https://www.frontendmentor.io?ref=challenge"
+              class="button-list__item button-list__item--hover"
+              href="https://github.com/vdeleeuw"
               target="_blank"
-              >Frontend Mentor</a
-            >. <br />
-            Coded by
-            <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
-            with ❤️.
-          </p>
+            >
+              <span>GitHub</span></a
+            >
+            <a
+              class="button-list__item button-list__item--hover"
+              href="https://www.frontendmentor.io/profile/vdeleeuw"
+              target="_blank"
+              ><span>Frontend Mentor</span></a
+            >
+            <span class="button-list__item button-list__item--disabled"
+              >LinkedIn</span
+            >
+            <span class="button-list__item button-list__item--disabled"
+              >Twitter</span
+            >
+            <span class="button-list__item button-list__item--disabled"
+              >Instagram</span
+            >
+          </div>
+
+          <!-- attribution -->
+          <div class="attribution">
+            <p>
+              Challenge by
+              <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+              >. <br />
+              Coded by
+              <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
+              with ❤️.
+            </p>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
