--- a/frontend-mentor/recipe-page-main/index.html
+++ b/frontend-mentor/recipe-page-main/index.html
@@ -151,123 +151,127 @@
     </style>
   </head>
   <body>
-    <!-- challenge -->
-    <div class="container">
-      <div class="card">
-        <img src="assets/images/image-omelette.jpeg" alt="delicious omelette" />
-        <div class="card-text">
-          <h1>Simple Omelette Recipe</h1>
+    <main>
+      <div class="container">
+        <div class="card">
+          <img
+            src="assets/images/image-omelette.jpeg"
+            alt="delicious omelette"
+          />
+          <div class="card-text">
+            <h1>Simple Omelette Recipe</h1>
 
-          <p>
-            An easy and quick dish, perfect for any meal. This classic omelette
-            combines beaten eggs cooked to perfection, optionally filled with
-            your choice of cheese, vegetables, or meats.
-          </p>
+            <p>
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+            </p>
 
-          <br />
+            <br />
 
-          <div class="preparation">
-            <h3>Preparation time</h3>
+            <div class="preparation">
+              <h3>Preparation time</h3>
+              <ul>
+                <li><strong>Total</strong>: Approximately 10 minutes</li>
+                <li><strong>Preparation</strong>: 5 minutes</li>
+                <li><strong>Cooking</strong>: 5 minutes</li>
+              </ul>
+            </div>
+
+            <br />
+
+            <h2>Ingredients</h2>
             <ul>
-              <li><strong>Total</strong>: Approximately 10 minutes</li>
-              <li><strong>Preparation</strong>: 5 minutes</li>
-              <li><strong>Cooking</strong>: 5 minutes</li>
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
             </ul>
-          </div>
 
-          <br />
+            <hr />
 
-          <h2>Ingredients</h2>
-          <ul>
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
+            <h2>Instructions</h2>
+            <ol>
+              <li>
+                <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
+                pinch of salt and pepper until they are well mixed. You can add
+                a tablespoon of water or milk for a fluffier texture.
+              </li>
 
-          <hr />
+              <li>
+                <strong>Heat the pan</strong>: Place a non-stick frying pan over
+                medium heat and add butter or oil.
+              </li>
 
-          <h2>Instructions</h2>
-          <ol>
-            <li>
-              <strong>Beat the eggs</strong>: In a bowl, beat the eggs with a
-              pinch of salt and pepper until they are well mixed. You can add a
-              tablespoon of water or milk for a fluffier texture.
-            </li>
+              <li>
+                <strong>Cook the omelette</strong>: Once the butter is melted
+                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
+                evenly coat the surface.
+              </li>
 
-            <li>
-              <strong>Heat the pan</strong>: Place a non-stick frying pan over
-              medium heat and add butter or oil.
-            </li>
+              <li>
+                <strong>Add fillings (optional)</strong>: When the eggs begin to
+                set at the edges but are still slightly runny in the middle,
+                sprinkle your chosen fillings over one half of the omelette.
+              </li>
 
-            <li>
-              <strong>Cook the omelette</strong>: Once the butter is melted and
-              bubbling, pour in the eggs. Tilt the pan to ensure the eggs evenly
-              coat the surface.
-            </li>
+              <li>
+                <strong>Fold and serve</strong>: As the omelette continues to
+                cook, carefully lift one edge and fold it over the fillings. Let
+                it cook for another minute, then slide it onto a plate.
+              </li>
 
-            <li>
-              <strong>Add fillings (optional)</strong>: When the eggs begin to
-              set at the edges but are still slightly runny in the middle,
-              sprinkle your chosen fillings over one half of the omelette.
-            </li>
+              <li>
+                <strong>Enjoy</strong>: Serve hot, with additional salt and
+                pepper if needed.
+              </li>
+            </ol>
 
-            <li>
-              <strong>Fold and serve</strong>: As the omelette continues to
-              cook, carefully lift one edge and fold it over the fillings. Let
-              it cook for another minute, then slide it onto a plate.
-            </li>
+            <hr />
 
-            <li>
-              <strong>Enjoy</strong>: Serve hot, with additional salt and pepper
-              if needed.
-            </li>
-          </ol>
-
-          <hr />
-
-          <h2>Nutrition</h2>
-          <p>
-            The table below shows nutritional values per serving without the
-            additional fillings.
-          </p>
-          <div class="table">
-            <div class="table-row">
-              <span>Calories</span>
-              <span><strong>277kcal</strong></span>
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <div class="table">
+              <div class="table-row">
+                <span>Calories</span>
+                <span><strong>277kcal</strong></span>
+              </div>
+              <div class="table-row">
+                <span>Carbs</span>
+                <span><strong>0g</strong></span>
+              </div>
+              <div class="table-row">
+                <span>Protein</span>
+                <span><strong>20g</strong></span>
+              </div>
+              <div class="table-row">
+                <span>Fat</span>
+                <span><strong>22g</strong></span>
+              </div>
             </div>
-            <div class="table-row">
-              <span>Carbs</span>
-              <span><strong>0g</strong></span>
-            </div>
-            <div class="table-row">
-              <span>Protein</span>
-              <span><strong>20g</strong></span>
-            </div>
-            <div class="table-row">
-              <span>Fat</span>
-              <span><strong>22g</strong></span>
-            </div>
-          </div>
 
-          <!-- attribution -->
-          <br />
-          <div class="attribution">
-            Challenge by
-            <a
-              href="https://www.frontendmentor.io?ref=challenge"
-              target="_blank"
-              >Frontend Mentor</a
-            >. <br />
-            Coded by
-            <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
-            with ❤️.
+            <!-- attribution -->
+            <br />
+            <div class="attribution">
+              Challenge by
+              <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+              >. <br />
+              Coded by
+              <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
+              with ❤️.
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
