--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -126,7 +126,7 @@
             <span class="card__tag-list__item">Web</span>
           </div>
           <span class="card__date">Published 21 Dec 2023</span>
-          <span class="card__title">HTML & CSS foundations</span>
+          <h1 class="card__title">HTML & CSS foundations</h1>
           <p class="card__description">
             These languages are the backbone of every website, defining
             structure, content, and presentation.
