--- a/frontend-mentor/product-preview-card-component-main/index.html
+++ b/frontend-mentor/product-preview-card-component-main/index.html
@@ -100,7 +100,7 @@
         .card__content__title {
           font-family: var(--fraunces);
           font-weight: var(--bold);
-          font-size: 2.5em;
+          font-size: 1.2em;
         }
 
         .card__content__description {
@@ -214,7 +214,7 @@
               <span>Perfume</span>
             </div>
             <div class="card__content__title">
-              <span>Gabrielle Essence Eau De Parfum</span>
+              <h1>Gabrielle Essence Eau De Parfum</h1>
             </div>
             <div class="card__content__description">
               <p>
