--- a/frontend-mentor/recipe-page-main/index.html
+++ b/frontend-mentor/recipe-page-main/index.html
@@ -67,10 +67,6 @@
         font-family: "YoungSerif", sans-serif;
       }
 
-      h3 {
-        color: hsl(332, 51%, 32%);
-      }
-
       ol {
         list-style-type: decimal;
 
@@ -94,6 +90,11 @@
 
       .preparation {
         padding-left: 3em;
+
+        h2 {
+          font-size: 1.2em;
+          color: hsl(332, 51%, 32%);
+        }
       }
 
       /* img */
@@ -170,7 +171,7 @@
             <br />
 
             <div class="preparation">
-              <h3>Preparation time</h3>
+              <h2>Preparation time</h2>
               <ul>
                 <li><strong>Total</strong>: Approximately 10 minutes</li>
                 <li><strong>Preparation</strong>: 5 minutes</li>
