--- a/frontend-mentor/social-links-profile-main/index.html
+++ b/frontend-mentor/social-links-profile-main/index.html
@@ -113,7 +113,7 @@
               src="assets/images/avatar-vdeleeuw.png"
               alt="user's avatar"
             />
-            <span class="title-block__main">V. de Leeuw</span>
+            <h1 class="title-block__main">V. de Leeuw</h1>
             <span class="title-block__subtitle">Somewhere, France</span>
           </div>
 
