--- a/frontend-mentor/product-preview-card-component-main/index.html
+++ b/frontend-mentor/product-preview-card-component-main/index.html
@@ -68,24 +68,11 @@
 
         .card__illustration {
           display: flex;
-          .card__illustration--desktop {
-            display: none;
 
-            img {
-              width: 100%;
-              height: 100%;
-              border-radius: 1em 0 0 1em;
-            }
-          }
-
-          .card__illustration--mobile {
-            display: block;
-
-            img {
-              width: 100%;
-              height: 100%;
-              border-radius: 1em 1em 0 0;
-            }
+          img {
+            width: 100%;
+            height: 100%;
+            border-radius: 1em 1em 0 0;
           }
         }
 
@@ -164,12 +151,8 @@
           .card__illustration {
             width: 50%;
 
-            .card__illustration--desktop {
-              display: block;
-            }
-
-            .card__illustration--mobile {
-              display: none;
+            img {
+              border-radius: 1em 0 0 1em;
             }
           }
 
@@ -196,18 +179,16 @@
       <div class="container">
         <div class="card">
           <div class="card__illustration">
-            <div class="card__illustration--mobile">
+            <picture>
+              <source
+                srcset="images/image-product-desktop.jpg"
+                media="(min-width: 40em)"
+              />
               <img
                 src="images/image-product-mobile.jpg"
                 alt="bottle of channel eau de parfum"
               />
-            </div>
-            <div class="card__illustration--desktop">
-              <img
-                src="images/image-product-desktop.jpg"
-                alt="bottle of channel eau de parfum"
-              />
-            </div>
+            </picture>
           </div>
           <div class="card__content">
             <div class="card__content__category">
