🐛fix: height to min-height

--- a/frontend-mentor/product-preview-card-component-main/index.html
+++ b/frontend-mentor/product-preview-card-component-main/index.html
@@ -39,7 +39,7 @@
       }
 
       .container {
-        height: 95vh;
+        min-height: 95vh;
         display: flex;
         justify-content: center;
         align-items: center;
