--- a/frontend-mentor/qr-code-component-main/index.html
+++ b/frontend-mentor/qr-code-component-main/index.html
@@ -36,7 +36,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 98vh;
+        min-height: 98vh;
       }
 
       .card {
@@ -60,8 +60,10 @@
 
         .card__illustration {
           img {
-            height: 100%;
-            width: 100%;
+            max-width: 100%;
+            max-height: 100%;
+            box-sizing: border-box;
+            object-fit: cover;
             border-radius: 1.1em;
           }
         }
