🐛fix: overflow hidden

--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -13,10 +13,9 @@
       }
 
       body {
-        height: 100vh;
+        min-height: 95vh;
         background-color: hsl(47, 88%, 63%);
         font-family: "Fightree", sans-serif;
-        overflow: hidden;
       }
 
       .container {
