--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Blog preview card | vdeleeuw</title>
 
+    <!-- css reset -->
+    <link rel="stylesheet" href="../reset.css" />
+
     <style>
       @font-face {
         font-family: "Figtree";
