--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -1,3 +1,11 @@
+<!-------------------------------------------
+Various problems : 
+ - bad bem
+ - bad a11y (too much span/div)
+ - unecessary flexboxes
+ - misuse of padding/margin
+ - no footer for attribution
+-------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
   <head>
