--- a/frontend-mentor/recipe-page-main/index.html
+++ b/frontend-mentor/recipe-page-main/index.html
@@ -1,3 +1,11 @@
+<!-------------------------------------------
+Various problems : 
+ - no/bad bem
+ - font values in px instead of rem/em
+ - unecessary flexboxes
+ - misuse of padding/margin
+ - no footer for attribution
+-------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
   <head>
