--- a/frontend-mentor/social-links-profile-main/index.html
+++ b/frontend-mentor/social-links-profile-main/index.html
@@ -1,3 +1,9 @@
+<!-------------------------------------------
+Various problems : 
+ - no footer for attribution
+ - misuse of padding/margin
+ - font size values in px insted of em/rem
+-------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
   <head>
