--- a/frontend-mentor/results-summary-component-main/index.html
+++ b/frontend-mentor/results-summary-component-main/index.html
@@ -1,3 +1,10 @@
+<!-------------------------------------------
+Various problems : 
+ - bad a11y (too much span/div)
+ - no footer for attribution
+ - misuse of padding/margin
+ - <span> instead of a <button>
+-------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
   <head>
