--- a/frontend-mentor/profile-card-component-main/index.html
+++ b/frontend-mentor/profile-card-component-main/index.html
@@ -46,9 +46,8 @@
         background-color: var(--color-dark-cyan);
         background-image: url(images/bg-pattern-top.svg),
           url(images/bg-pattern-bottom.svg);
-        background-position-x: -37.5rem, 21.875rem;
-        background-position-y: -25rem, 28.125rem;
-        background-repeat: no-repeat, no-repeat;
+        background-position: right 50vw bottom 50vh, left 50vw top 50vh;
+        background-repeat: no-repeat;
       }
 
       .profile {
