🐛fix: remove useless 0n

--- a/frontend-mentor/social-proof-section-master/index.html
+++ b/frontend-mentor/social-proof-section-master/index.html
@@ -187,10 +187,10 @@
           padding-left: 1rem;
           padding-right: 2rem;
 
-          &:nth-child(0n + 1) {
+          &:nth-child(1) {
             transform: translateX(-6rem);
           }
-          &:nth-child(0n + 2) {
+          &:nth-child(2) {
             transform: translateX(-3rem);
           }
         }
@@ -207,10 +207,10 @@
         }
 
         .card__review {
-          &:nth-child(0n + 2) {
+          &:nth-child(2) {
             transform: translateY(1rem);
           }
-          &:nth-child(0n + 3) {
+          &:nth-child(3) {
             transform: translateY(2rem);
           }
         }
