🐛fix: button accessibility

--- a/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -239,14 +239,20 @@
           </div>
         </div>
         <div class="page__social-media">
-          <button class="page__social-button">
-            <ion-icon name="logo-facebook"></ion-icon>
+          <button aria-label="Facebook" class="page__social-button">
+            <ion-icon
+              aria-label="Facebook logo"
+              name="logo-facebook"
+            ></ion-icon>
           </button>
-          <button class="page__social-button">
-            <ion-icon name="logo-twitter"></ion-icon>
+          <button aria-label="Twitter" class="page__social-button">
+            <ion-icon aria-label="Twitter logo" name="logo-twitter"></ion-icon>
           </button>
-          <button class="page__social-button">
-            <ion-icon name="logo-instagram"></ion-icon>
+          <button aria-label="Instragram" class="page__social-button">
+            <ion-icon
+              aria-label="Instragram logo"
+              name="logo-instagram"
+            ></ion-icon>
           </button>
         </div>
       </div>
