--- a/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -168,7 +168,7 @@
 
         .page__logo {
           grid-area: header;
-          max-width: 15rem;
+          max-width: 20rem;
         }
 
         .page__content {
@@ -187,7 +187,8 @@
 
         .page__title {
           text-align: left;
-          font-size: 2.1rem;
+          font-size: 2.3rem;
+          line-height: 3.5rem;
         }
 
         .page__description {
@@ -199,6 +200,7 @@
 
           button {
             padding: 1rem 4rem;
+            font-size: 1rem;
           }
         }
 
