--- a/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -1,6 +1,7 @@
 <!--
   Maybe I should have done : 
    - Main logo in <header>
+   - SVG for logos instead of the full module
    - Social medias logos in <footer>
   But since it is a simple page, I prefer BEM naming for now.
 -->
