🐛fix: remove div with anchor

--- a/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
+++ b/frontend-mentor/huddle-landing-page-with-single-introductory-section-master/index.html
@@ -102,6 +102,7 @@
         font-size: 1.2rem;
         text-align: center;
         font-family: var(--font-secondary);
+        margin-bottom: 2rem;
       }
 
       .page__register {
@@ -111,11 +112,7 @@
         box-shadow: 0rem 0.2rem 0.2rem hsla(0, 0%, 0%, 0.3);
         border-radius: 2rem;
         padding: 0.8rem 5rem;
-        margin-top: 2rem;
-
-        a {
-          text-decoration: none;
-        }
+        text-decoration: none;
 
         &:hover {
           cursor: pointer;
@@ -241,9 +238,7 @@
             but so does your audience. Create connections with your users as you
             engage in genuine discussion.
           </p>
-          <div class="page__register">
-            <a aria-label="Register" href="#">Register</a>
-          </div>
+          <a class="page__register" aria-label="Register" href="#">Register</a>
         </div>
         <div class="page__social-media">
           <a
