--- a/frontend-mentor/four-card-feature-section-master/index.html
+++ b/frontend-mentor/four-card-feature-section-master/index.html
@@ -45,6 +45,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        background-color: var(--color-very-light-gray);
       }
 
       .container {
