🐛fix: color problem

--- a/frontend-mentor/order-summary-component-main/index.html
+++ b/frontend-mentor/order-summary-component-main/index.html
@@ -49,9 +49,9 @@
       }
 
       .order {
-        background-color: var(--color-very-pale-blue);
         border-radius: 1.2rem;
         max-width: 30rem;
+        background-color: white;
         box-shadow: 0rem 3rem 3rem -2rem hsla(0, 0%, 0%, 0.1);
       }
 
@@ -81,10 +81,14 @@
       }
 
       .order__plan {
-        padding: 2.5rem 1.5rem;
+        margin-top: 1.5rem;
+        padding: 2rem 1.5rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        border-radius: 1.5rem;
+        background-color: var(--color-very-pale-blue);
       }
 
       .order__details {
