--- a/frontend-mentor/blog-preview-card-main/index.html
+++ b/frontend-mentor/blog-preview-card-main/index.html
@@ -1,11 +1,3 @@
-<!-------------------------------------------
-Various problems : 
- - bad bem
- - bad a11y (too much span/div)
- - unecessary flexboxes
- - misuse of padding/margin
- - no footer for attribution
--------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,10 +18,8 @@ Various problems :
       body {
         background-color: hsl(47, 88%, 63%);
         font-family: "Fightree", sans-serif;
-      }
+        min-height: 100vh;
 
-      .container {
-        min-height: 95vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -38,72 +28,75 @@ Various problems :
 
       .card {
         background-color: hsl(0, 0%, 100%);
-        border-radius: 1.1em;
-        border: 0.1em solid hsl(0, 0%, 7%);
-        box-shadow: 0.5em 0.5em 0em 0em hsl(0, 0%, 7%);
+        border-radius: 1.1rem;
+        border: 0.1rem solid hsl(0, 0%, 7%);
+        box-shadow: 0.5rem 0.5rem 0rem 0rem hsl(0, 0%, 7%);
 
         display: flex;
         flex-direction: column;
-        padding: 1.5em;
-        max-width: 20em;
+        padding: 1.5rem;
+        max-width: 20rem;
+      }
 
-        .card__illustration {
-          width: 100%;
-          height: auto;
+      .card__tag-list {
+        padding-top: 2rem;
+      }
 
-          img {
-            border-radius: 1.1em;
-          }
-        }
+      .card__tag-list__item {
+        text-align: center;
+        background-color: hsl(47, 88%, 63%);
+        padding: 0.5rem 1rem;
+        border-radius: 0.5rem;
+        font-weight: 800;
+        font-size: 0.8rem;
+      }
 
-        .card__tag-list {
-          padding: 2em 0;
+      .card__date {
+        padding-top: 1rem;
+        font-size: 0.8rem;
+      }
 
-          .card__tag-list__item {
-            text-align: center;
-            background-color: hsl(47, 88%, 63%);
-            padding: 0.5em;
-            border-radius: 0.5em;
-            font-weight: 800;
-            font-size: 0.9em;
-          }
-        }
+      .card__title {
+        font-size: 1.2rem;
+        font-weight: 800;
+      }
 
-        .card__date {
-          padding-bottom: 2em;
-          font-size: 0.9em;
-        }
+      .card__description {
+        line-height: 1.5rem;
+        font-size: 0.9rem;
+        color: hsl(0, 0%, 50%);
+      }
 
-        .card__title {
-          font-size: 1.2em;
-          font-weight: 800;
-        }
+      .card__author {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding-top: 1rem;
+      }
 
-        .card__description {
-          line-height: 1.5em;
-          color: hsl(0, 0%, 50%);
-        }
+      .card__author__avatar {
+        height: 3rem;
+        width: 3rem;
+      }
 
-        .card__author {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
+      .card__author__name {
+        padding-left: 1rem;
+        font-weight: 800;
+        margin-top: 0;
+      }
 
-          .card__author__avatar {
-            height: 50px;
-            width: 50px;
-          }
+      .card__illustration {
+        width: 100%;
+        height: auto;
 
-          .card__author__name {
-            padding-left: 1em;
-            font-weight: 800;
-          }
+        img {
+          border-radius: 1.1rem;
         }
       }
 
       .card--hover:hover {
         cursor: pointer;
-        box-shadow: 0.7em 0.7em 0em 0em hsl(0, 0%, 7%);
+        box-shadow: 0.7rem 0.7rem 0rem 0rem hsl(0, 0%, 7%);
 
         .card__title {
           color: hsl(47, 88%, 63%);
@@ -111,8 +104,8 @@ Various problems :
       }
 
       .attribution {
-        padding-top: 1em;
-        font-size: 11px;
+        padding-top: 1rem;
+        font-size: 0.6875rem;
         text-align: center;
         a {
           color: hsl(228, 45%, 44%);
@@ -122,47 +115,44 @@ Various problems :
   </head>
   <body>
     <main>
-      <div class="container">
-        <div class="card card--hover">
-          <div class="card__illustration">
-            <img
-              src="assets/images/illustration-article.svg"
-              alt="illustration"
-            />
-          </div>
-          <div class="card__tag-list">
-            <span class="card__tag-list__item">Learning</span>
-            <span class="card__tag-list__item">Web</span>
-          </div>
-          <span class="card__date">Published 21 Dec 2023</span>
-          <h1 class="card__title">HTML & CSS foundations</h1>
-          <p class="card__description">
-            These languages are the backbone of every website, defining
-            structure, content, and presentation.
-          </p>
-          <div class="card__author">
-            <img
-              class="card__author__avatar"
-              src="assets/images/avatar-vdeleeuw.png"
-              alt="author's avatar"
-            />
-            <span class="card__author__name">V. de Leeuw</span>
-          </div>
+      <div class="card card--hover">
+        <div class="card__illustration">
+          <img
+            src="assets/images/illustration-article.svg"
+            alt="illustration"
+          />
         </div>
-
-        <!-- attribution -->
-        <div class="attribution">
-          <p>
-            Challenge by
-            <a
-              href="https://www.frontendmentor.io?ref=challenge"
-              target="_blank"
-              >Frontend Mentor</a
-            >. <br />
-            Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
-          </p>
+        <div class="card__tag-list">
+          <span class="card__tag-list__item">Learning</span>
+        </div>
+        <p class="card__date">Published 21 Dec 2023</p>
+        <h1 class="card__title">HTML & CSS foundations</h1>
+        <p class="card__description">
+          These languages are the backbone of every website, defining structure,
+          content, and presentation.
+        </p>
+        <div class="card__author">
+          <img
+            class="card__author__avatar"
+            src="assets/images/avatar-vdeleeuw.png"
+            alt="author's avatar"
+          />
+          <p class="card__author__name">V. de Leeuw</p>
         </div>
       </div>
     </main>
+
+    <!-- attribution -->
+    <footer>
+      <div class="attribution">
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. <br />
+          Coded by <a href="https://github.com/vdeleeuw">vdeleeuw</a> with ❤️.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
