--- a/frontend-mentor/product-preview-card-component-main/index.html
+++ b/frontend-mentor/product-preview-card-component-main/index.html
@@ -1,11 +1,3 @@
-<!-------------------------------------------
-Various problems : 
- - bad bem
- - bad a11y (too much span/div)
- - unecessary flexboxes
- - misuse of padding/margin
- - no footer for attribution
--------------------------------------------->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -46,110 +38,113 @@ Various problems :
 
       body {
         font-family: var(--montserrat);
-        background-color: var(--cream);
-      }
 
-      .container {
-        min-height: 95vh;
+        background-color: var(--cream);
+        min-height: 100vh;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        padding: 1em;
+        padding: 1rem;
       }
 
       p {
-        font-size: 14px;
-        line-height: 1.4em;
+        font-size: 0.875rem;
+        line-height: 1.4rem;
         font-weight: var(--medium);
       }
 
       .card {
         background-color: var(--white);
-        border-radius: 1em;
+        border-radius: 1rem;
         display: flex;
         flex-direction: column;
-        max-width: 40em;
+        max-width: 40rem;
+      }
 
-        .card__content {
-          padding: 1.5em;
-          display: flex;
-          flex-direction: column;
+      .card__content {
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+      }
+
+      .card__illustration {
+        display: flex;
+
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 1rem 1rem 0 0;
         }
+      }
 
-        .card__illustration {
-          display: flex;
+      .card__category {
+        font-weight: var(--medium);
+        margin-top: 0.5rem;
+        text-transform: uppercase;
+        letter-spacing: 0.3rem;
+        font-size: 0.8rem;
+        color: var(--dark-grayish-blue);
+      }
 
-          img {
-            width: 100%;
-            height: 100%;
-            border-radius: 1em 1em 0 0;
-          }
-        }
+      .card__title {
+        font-family: var(--fraunces);
+        font-weight: var(--bold);
+        font-size: 2rem;
+      }
 
-        .card__content__category {
-          font-weight: var(--medium);
-          padding: 0.5em 0;
-          text-transform: uppercase;
-          letter-spacing: 0.3em;
-          color: var(--dark-grayish-blue);
-        }
+      .card__description {
+        color: var(--dark-grayish-blue);
+      }
 
-        .card__content__title {
-          font-family: var(--fraunces);
-          font-weight: var(--bold);
-          font-size: 1.2em;
-        }
+      .card__price {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-top: 2rem;
+      }
 
-        .card__content__description {
-          color: var(--dark-grayish-blue);
-        }
+      .card__price__new {
+        font-family: var(--fraunces);
+        font-weight: var(--bold);
+        font-size: 2rem;
+        color: var(--dark-cyan);
+        margin-top: 0;
+      }
 
-        .card__content__price {
-          display: flex;
-          flex-wrap: wrap;
-          flex-direction: row;
-          align-items: center;
-          padding-bottom: 1em;
+      .card__price__old {
+        font-size: 0.9rem;
+        color: var(--dark-grayish-blue);
+        font-weight: var(--medium);
+        text-decoration: line-through;
+        padding-left: 1.5rem;
+        margin-top: 0;
+      }
 
-          .card__content__price__new {
-            font-family: var(--fraunces);
-            font-weight: var(--bold);
-            font-size: 2em;
-            color: var(--dark-cyan);
-          }
+      .card__cart-button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 1rem;
+        margin-top: 1.5rem;
+        border: none;
 
-          .card__content__price__old {
-            font-size: 0.9em;
-            color: var(--dark-grayish-blue);
-            font-weight: var(--medium);
-            text-decoration: line-through;
-            padding-left: 1.5em;
-          }
-        }
+        transition: background-color 0.3s ease;
 
-        .card__content__cart-button {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: center;
-          padding: 1em;
-          transition: background-color 0.3s ease;
+        background-color: var(--dark-cyan);
+        color: var(--white);
+        font-weight: var(--bold);
+        border-radius: 0.5rem;
 
-          background-color: var(--dark-cyan);
-          color: var(--white);
-          font-weight: var(--bold);
-          border-radius: 0.5em;
-
-          .card__content__cart-button__icon {
-            padding-right: 0.6em;
-          }
-        }
-
-        .card__content__cart-button:hover {
-          background-color: hsl(158, 36%, 17%); /* no color in style-guide ? */
+        &:hover {
+          background-color: hsl(158, 36%, 17%);
           cursor: pointer;
         }
+      }
+
+      .card__cart-button__icon {
+        margin-right: 0.6rem;
       }
 
       /* desktop */
@@ -157,27 +152,25 @@ Various problems :
         .card {
           display: flex;
           flex-direction: row;
-          max-height: 40em;
+          max-height: 40rem;
+        }
 
-          .card__illustration {
-            width: 50%;
-
-            img {
-              border-radius: 1em 0 0 1em;
-            }
+        .card__illustration {
+          img {
+            border-radius: 1rem 0 0 1rem;
           }
+        }
 
-          .card__content {
-            padding: 1em 2em;
-            width: 50%;
-            justify-content: space-around;
-          }
+        .card__content {
+          padding: 2rem;
+          max-width: 19rem;
+          justify-content: space-around;
         }
       }
 
       /* attribution */
       .attribution {
-        font-size: 11px;
+        font-size: 0.6875rem;
         text-align: center;
         a {
           color: hsl(228, 45%, 44%);
@@ -187,67 +180,53 @@ Various problems :
   </head>
   <body>
     <main>
-      <div class="container">
-        <div class="card">
-          <div class="card__illustration">
-            <picture>
-              <source
-                srcset="images/image-product-desktop.jpg"
-                media="(min-width: 40em)"
-              />
-              <img
-                src="images/image-product-mobile.jpg"
-                alt="bottle of channel eau de parfum"
-              />
-            </picture>
-          </div>
-          <div class="card__content">
-            <div class="card__content__category">
-              <span>Perfume</span>
-            </div>
-            <div class="card__content__title">
-              <h1>Gabrielle Essence Eau De Parfum</h1>
-            </div>
-            <div class="card__content__description">
-              <p>
-                A floral, solar and voluptuous interpretation composed by
-                Olivier Polge, Perfumer-Creator for the House of CHANEL.
-              </p>
-            </div>
-            <div class="card__content__price">
-              <div class="card__content__price__new">
-                <span>$149.99</span>
-              </div>
-              <div class="card__content__price__old">
-                <span>$169.99</span>
-              </div>
-            </div>
-            <div class="card__content__cart-button">
-              <div class="card__content__cart-button__icon">
-                <img src="images/icon-cart.svg" alt="cart icon" />
-              </div>
-              <div class="card__content__cart-button__text">
-                <span>Add to Cart</span>
-              </div>
-            </div>
-          </div>
+      <div class="card">
+        <div class="card__illustration">
+          <picture>
+            <source
+              srcset="images/image-product-desktop.jpg"
+              media="(min-width: 40rem)"
+            />
+            <img
+              src="images/image-product-mobile.jpg"
+              alt="bottle of channel eau de parfum"
+            />
+          </picture>
         </div>
-
-        <!-- attribution -->
-        <div class="attribution">
-          <p>
-            Challenge by
-            <a
-              href="https://www.frontendmentor.io?ref=challenge"
-              target="_blank"
-              >Frontend Mentor</a
-            >. <br />
-            Coded by
-            <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
-            with ❤️.
+        <div class="card__content">
+          <h2 class="card__category">Perfume</h2>
+          <h1 class="card__title">Gabrielle Essence Eau De Parfum</h1>
+          <p class="card__description">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
           </p>
+          <div class="card__price">
+            <p class="card__price__new">$149.99</p>
+            <p class="card__price__old">$169.99</p>
+          </div>
+          <button class="card__cart-button">
+            <div class="card__cart-button__icon">
+              <img src="images/icon-cart.svg" alt="cart icon" />
+            </div>
+            <span class="card__cart-button__text"> Add to Cart </span>
+          </button>
         </div>
       </div>
     </main>
+
+    <!-- attribution -->
+    <footer>
+      <div class="attribution">
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. <br />
+          Coded by
+          <a href="https://github.com/vdeleeuw" target="_blank">vdeleeuw</a>
+          with ❤️.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
